--- a/app/.gitignore
+++ b/app/.gitignore
@@ -4,3 +4,4 @@ src/main/java/ir/accountbooklet/android/Utils/AdiveryUtils.java
 src/main/java/ir/accountbooklet/android/Utils/TapsellUtils.java
 src/main/java/ir/accountbooklet/android/Utils/MortinoUtils.java
 src/main/java/ir/accountbooklet/android/Session/Database.java
+src/main/java/ir/accountbooklet/android/Session/Session.java
